--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <footer>
         <p>© 2026 My Website</p>
     </footer>
-
+<script src="//code.tidio.co/39i6iq0p7thw40fr5xg6jmjwdxocgdgl.js" async></script>
 </body>
 </html>
+
 
